[package]
name = "rustedflask"
version = "1.1.0"
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
description = "Like Flask but in Rust!"
repository = "https://github.com/zurgeg/rustedflask"
homepage = "https://github.com/zurgeg/rustedflask"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.4"
regex = "1.10.2"

[features]
jinja = []
all = ["jinja"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
